Removing a bug with visible scrollbars

--- a/static/css/index.css
+++ b/static/css/index.css
@@ -18,7 +18,7 @@ main {
     position: absolute;
     top: 0;
     left: 0;
-    overflow: auto;
+    overflow: hidden;
 }
 
 #content {
